# AMP_competition_test

./: pyproject.toml
generate_broad_spectrum/: library.fasta  top.fasta
src/my_model/: __init__.py  generate.py
